--- a/r08/pom.xml
+++ b/r08/pom.xml
@@ -65,11 +65,11 @@
 						</goals>
 						<configuration>
 							<!-- insira sua matricula -->
-							<matricula>121110386</matricula>
+							<matricula>INSIRA SEU NUMERO DE MATRICULA</matricula>
 							<!-- insira o ID correto da atividade e a turma -->
-							<roteiro>R08-02</roteiro>
+							<roteiro>R0X-0X</roteiro>
 							<!-- NÃO MODIFIQUE AS TAGS ABAIXO -->
-							<semestre>2023.1</semestre>
+							<semestre>2023.2</semestre>
 							<url>http://150.165.15.10:81/submitAtividade</url>
 						</configuration>
 					</execution>
